[gd_scene load_steps=15 format=2]

[ext_resource path="res://Prefabs/NPC.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Prefabs/Gun.tscn" type="PackedScene" id=3]
[ext_resource path="res://Tools/StateMachine/StateMachine.gd" type="Script" id=4]
[ext_resource path="res://Tools/StateMachine/StateNode.gd" type="Script" id=5]
[ext_resource path="res://Scripts/AI/Patrol.gd" type="Script" id=6]
[ext_resource path="res://Scripts/AI/Idle.gd" type="Script" id=7]
[ext_resource path="res://Scripts/AI/Chase.gd" type="Script" id=8]
[ext_resource path="res://Scripts/AI/Roam.gd" type="Script" id=9]
[ext_resource path="res://Prefabs/AnimationDEAD.tres" type="Animation" id=10]

[sub_resource type="Animation" id=1]
resource_name = "IDLE"
tracks/0/type = "value"
tracks/0/path = NodePath("Flipeable/Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Rect2( 1, 1, 22, 22 ) ]
}

[sub_resource type="Animation" id=2]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:SideOfLook")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, -1 ]
}

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Flipeable/Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Rect2( 1, 1, 22, 22 ), Rect2( 49, 1, 22, 22 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 34, 8 )

[node name="Enemy" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="AnimationPlayer" parent="." index="0"]
anims/DEAD = ExtResource( 10 )
anims/IDLE = SubResource( 1 )
anims/LOOK = SubResource( 2 )
anims/WALK = SubResource( 3 )

[node name="Timer" type="Timer" parent="." index="1"]

[node name="Sprite" parent="Flipeable" index="0"]
region_rect = Rect2( 1, 1, 22, 22 )

[node name="Gun" parent="Flipeable/GunPosition" index="0" instance=ExtResource( 3 )]
position = Vector2( 1, 1 )

[node name="RayCast2D" type="RayCast2D" parent="Flipeable" index="2"]
position = Vector2( 0, -4 )
enabled = true
cast_to = Vector2( 220, 0 )

[node name="HitBox" parent="." index="4"]
collision_layer = 0

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource( 4 )

[node name="StateMachine" type="Node" parent="." index="5"]
script = ExtResource( 4 )
InitialState = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" index="0"]
script = ExtResource( 7 )

[node name="Patrol" type="Node" parent="StateMachine" index="1"]
script = ExtResource( 6 )
PatrolPath = [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]

[node name="Attack" type="Node" parent="StateMachine" index="2"]
script = ExtResource( 5 )

[node name="Chase" type="Node" parent="StateMachine" index="3"]
script = ExtResource( 8 )

[node name="Roam" type="Node" parent="StateMachine" index="4"]
script = ExtResource( 9 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
